<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.CartDetailsActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_back_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/cart"
        android:textAppearance="@style/title_text"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/siv_back_icon"
        app:layout_constraintTop_toTopOf="@id/siv_back_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/item_cart_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_price"
        app:layout_constraintTop_toBottomOf="@id/siv_back_icon" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/text_black_ten"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/bt_check_out"
        app:layout_constraintEnd_toEndOf="@id/bt_check_out"
        app:layout_constraintStart_toStartOf="@id/bt_check_out"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tv_cart_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/cart_value"
                android:textAppearance="@style/title_text"
                android:textColor="@color/text_black_fifty"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cart_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:textAppearance="@style/title_text"
                android:textColor="@color/text_black_fifty"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_cart_value"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$257.98" />

            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/delivery"
                android:textAppearance="@style/title_text"
                android:textColor="@color/text_black_fifty"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cart_value" />

            <TextView
                android:id="@+id/tv_delivery_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/title_text"
                android:textColor="@color/text_black_fifty"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_delivery"
                tools:text="$5.00" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_delivery" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/total"
                android:textAppearance="@style/title_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/title_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_total"
                tools:text="$262.98" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bt_check_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/primary_red">

        <TextView
            android:id="@+id/tv_check_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_red"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/continue_to_checkout"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>