<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".screens.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_notification_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/bg_login_page" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="Experience \nluxury again."
        android:textColor="@color/text_black"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="42sp"
        android:fontFamily="@font/abril"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="Login to your account."
        android:textColor="@color/text_black_fifty"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/title_text"/>


    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/user_name"
        android:textColor="@color/text_black_fifty"
        android:textSize="14sp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:passwordToggleDrawable="@drawable/password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColor="@color/text_black_fifty"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/primary_red"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="14sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/title_text"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_red"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:paddingVertical="20dp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don’t have an account ?"
            android:textColor="@color/text_black_fifty"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            android:textAppearance="@style/title_text"/>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textColor="@color/primary_red"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/title_text"/>

    </LinearLayout>

</LinearLayout>